Closed
Bug 1546324
Opened 6 years ago
Closed 6 years ago
Crash in [@ static class mozilla::media::TimeUnit mozilla::media::operator%]
Categories
(Core :: Audio/Video: Playback, defect, P1)
Tracking
()
RESOLVED
FIXED
mozilla68
| Tracking | Status | |
|---|---|---|
| firefox-esr60 | --- | unaffected |
| firefox66 | --- | unaffected |
| firefox67 | --- | unaffected |
| firefox68 | --- | fixed |
People
(Reporter: calixte, Assigned: alwu)
References
(Blocks 1 open bug, Regression)
Details
(Keywords: crash, regression)
Crash Data
Attachments
(1 file)
This bug is for crash report bp-de3a5325-6922-4992-86e1-04f2d0190422.
Top 10 frames of crashing thread:
0 xul.dll static class mozilla::media::TimeUnit mozilla::media::operator% dom/media/TimeUnits.h:168
1 xul.dll void mozilla::MediaDecoderStateMachine::AdjustByLooping dom/media/MediaDecoderStateMachine.cpp:3925
2 xul.dll void mozilla::MediaDecoderStateMachine::UpdatePlaybackPositionPeriodically dom/media/MediaDecoderStateMachine.cpp:3412
3 xul.dll void mozilla::MediaDecoderStateMachine::DecodingState::Step dom/media/MediaDecoderStateMachine.cpp:2330
4 xul.dll void mozilla::MozPromise<bool, bool, 1>::ThenValue<`lambda at z:/task_1555926966/build/src/dom/media/MediaDecoderStateMachine.cpp:3478:7', `lambda at z:/task_1555926966/build/src/dom/media/MediaDecoderStateMachine.cpp:3482:7'>::DoResolveOrRejectInternal xpcom/threads/MozPromise.h:717
5 xul.dll mozilla::MozPromise<bool, bool, 1>::ThenValueBase::ResolveOrRejectRunnable::Run xpcom/threads/MozPromise.h:393
6 xul.dll nsresult mozilla::TaskQueue::Runner::Run xpcom/threads/TaskQueue.cpp:199
7 xul.dll nsresult nsThreadPool::Run xpcom/threads/nsThreadPool.cpp:244
8 xul.dll nsThread::ProcessNextEvent xpcom/threads/nsThread.cpp:1180
9 xul.dll NS_ProcessNextEvent xpcom/threads/nsThreadUtils.cpp:486
There is 1 crash in nightly 68 with buildid 20190422094240. In analyzing the backtrace, the regression may have been introduced by patch [1] to fix bug 1544150.
[1] https://hg.mozilla.org/mozilla-central/rev?node=2b5c64a994b3
Flags: needinfo?(alwu)
| Assignee | ||
Updated•6 years ago
|
Assignee: nobody → alwu
Flags: needinfo?(alwu)
| Assignee | ||
Comment 1•6 years ago
|
||
The value of mAudioDecodedDuration can be larger than int32, so we should use the modular function which accepts TimeUnitas a input.
Updated•6 years ago
|
Priority: -- → P1
Pushed by alwu@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/1c7736806fe0
use TimeUnit version modular. r=bryce
Comment 3•6 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla68
Updated•3 years ago
|
Has Regression Range: --- → yes
You need to log in
before you can comment on or make changes to this bug.
Description
•