Bug 1546324 - use TimeUnit version modular. r=bryce

The value of `mAudioDecodedDuration` can be larger than `int32`, so we should use the modular function which accepts `TimeUnit`as a input.

Differential Revision: https://phabricator.services.mozilla.com/D28536